Updates README.md
Adds new detail into README.md file.

Signed-off-by: George-Andrei Iosif <georgeiosif@live.com>